inspector/web/components/app-sidebar.css
app-sidebar {
  width: 400px;
  border-right: 1px solid var(--color-border);
  padding: 13px;
  height: 100%;
  flex-shrink: 0;
}

app-sidebar form {
  width: 100%;
  height: 100%;
  display: flex;
  gap: 15px;
  flex-direction: column;
}

app-sidebar label {
  font-weight: 500;
}

app-sidebar fieldset {
  display: flex;
  flex-direction: column;
  gap: 6px;
  border: none;
  padding: 0;
  margin: 0;
}

app-sidebar .status-message {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
  color: #666;
  font-style: italic;
  padding: 0;
  margin: 0;
}

app-sidebar select {
  width: 100%;
  padding: 7px;
  border: 1px solid var(--color-border);
  border-radius: 4px;
  font-weight: 500;
}

.schema {
  margin: 0;
  background: #eee;
  padding: 12px;
  font-size: 12px;
  border-radius: 4px;
  border: 1px solid var(--color-border);
}

app-sidebar textarea {
  resize: none;
  border: 1px solid var(--color-border);
  font-size: 12px;
  border-radius: 4px;
}

app-sidebar input[type='submit'] {
  padding: 8px;
  font-weight: 500;
  cursor: pointer;
  border: 1px solid var(--color-border);
  border-radius: 4px;
}

app-sidebar input[type='submit']:hover {
  background: var(--color-border);
}

